--- a/src/jade/checkout.jade
+++ b/src/jade/checkout.jade
@@ -129,8 +129,7 @@ html
 														.card__field-label CVV:
 														.card__field-wrap
 															input.card__input.input.js-card-cvv(type="text")
-										.card__edit
-											a.card__edit-link(href="#") Enter card number for expiration date and CVV
+										.card__edit Enter card number for expiration date and CVV
 								.form__foot
 									button.form__btn.btn(disabled) CONFIRM ORDER
 									button.form__btn.btn PAY $36 + $4 SHIPPING
@@ -141,19 +140,19 @@ html
 								.order__title-sub Benefiting After-School All-Stars
 								.order__list
 									.order__item
-										.order__preview
-											img.order__pic(src="img/product.jpg", alt="")
 										.order__info
 											.order__name Men’s T-Shirt
 											.order__options Heather Grey - L
 											.order__price $18.00
+										.order__preview
+											img.order__pic(src="img/product.jpg", alt="")
 									.order__item
-										.order__preview
-											img.order__pic(src="img/product.jpg", alt="")
 										.order__info
 											.order__name Men’s T-Shirt
 											.order__options Heather Grey - L
 											.order__price $18.00
+										.order__preview
+											img.order__pic(src="img/product.jpg", alt="")
 								.order__stats
 									.order__stats-value $3.00
 									.order__stats-title Sales Tax:
