--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -17,4 +17,6 @@ html
 				a(href="/checkout.html", target="_blank") checkout.html
 			div
 				a(href="/order.html", target="_blank") order.html
+			div
+				a(href="/campaigns.html", target="_blank") campaigns.html
 				
