--- a/src/jade/thank.jade
+++ b/src/jade/thank.jade
@@ -9,6 +9,7 @@ html
 	body
 		//- wrapper
 		.wrapper
+			//- header
 			header.header
 				.header__center.center
 					a.header__logo(href="#") omaze
