--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -138,6 +138,46 @@ a
 		+rm(719)
 			margin-top: 21px
 			font-size: 31px
+	&_campaign
+		+r(766)
+			margin-bottom: -68px
+			padding: 0
+			border: none
+	&_campaign &__logo
+		+r(766)
+			display: none
+
+.main
+	height: 300px
+	padding-top: 150px
+	background: url(../img/bg-main-sm.jpg) no-repeat 50% 50% / cover
+	margin-bottom: 40px
+	text-align: center
+	+rm(719)
+		height: 470px
+		margin: -70px 0 65px 
+		background: url(../img/bg-main.jpg) no-repeat 50% 50% / cover
+		text-align: left
+	&__logo
+		+nevis
+		font-size: 45px
+		color: #f3f2f3
+		letter-spacing: -2px
+		text-decoration: none
+		line-height: 1
+		+rm(719)
+			display: none
+		&-white
+			color: #fff
+	&__title
+		+lightitalic
+		font-size: 17px
+		color: #fff
+		+rm(719)
+			width: 400px
+			+extrabold
+			font-size: 48px
+			line-height: 1
 
 .nav
 	float: right
@@ -175,7 +215,10 @@ a
 		color: #000
 		text-decoration: none
 		&:first-child
-			margin: 0 
+			margin: 0
+	&_white &__btn
+		+r(766)
+			color: #FFF 
 
 .content
 	margin-bottom: 30px
@@ -1523,3 +1566,113 @@ a
 			font-size: 14px
 	&__title
 		font-size: 14px
+		
+.campaigns
+	text-align: center
+	&__title
+		margin-bottom: 35px 
+		font-size: 16px
+		letter-spacing: 2px
+		+rm(719)
+			+regular
+			margin-bottom: 60px
+			font-size: 26px
+	&__list
+		margin-bottom: 20px
+		font-size: 0
+	&__col
+		display: inline-block
+		width: 100%
+		margin-bottom: 40px
+		vertical-align: top
+		+rm(719)
+			width: 50%
+			margin-bottom: 80px
+		+rm(1023)
+			width: 33.33%
+	&__item
+		margin: 0 auto 
+
+.how
+	&__title
+		margin-bottom: 20px
+		+extrabold
+		font-size: 28px
+		text-align: center
+		+rm(767)
+			margin-bottom: 30px
+			font-size: 38px
+	&__list
+		position: relative
+		padding: 60px 0 30px
+		background: #F5F5F7
+		font-size: 0
+		+rm(767)
+			padding: 70px 0 15px
+		&:before
+			content: ""
+			position: absolute
+			top: 0
+			left: 50%
+			margin-left: -20px
+			+arr(40,20,#fff,b)
+	&__item
+		display: inline-block
+		width: 100%
+		margin-bottom: 25px
+		vertical-align: top
+		+rm(767)
+			width: 46%
+			margin-bottom: 55px
+			&:nth-child(2n)
+				margin-left: 8%
+	&__type
+		padding-left: 60px
+		+extrabold
+		text-transform: uppercase
+		font-size: 18px
+		text-transform: uppercase
+		+rm(767)
+			margin-bottom: 15px
+			font-size: 20px
+	&__info
+		+clr
+	&__icon
+		float: left
+		width: 45px
+		height: 45px
+		margin: 0 15px 0 0
+		background: $blue
+		border-radius: 50%
+		color: #FFF
+		+vertical
+		.icon
+			font-size: 26px
+			vertical-align: middle
+	&__text
+		display: table
+		font-size: 15px
+		+rm(719)
+			font-size: 18px
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
