--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -19,4 +19,6 @@ html
 				a(href="/order.html", target="_blank") order.html
 			div
 				a(href="/campaigns.html", target="_blank") campaigns.html
+			div
+				a(href="/thank.html", target="_blank") thank.html
 				
